--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -62,7 +62,7 @@
     /*  */
     .list .dircard {
         display: grid;
-        grid-template-columns: 2fr 3fr 1fr 2fr 1fr;
+        grid-template-columns: 2fr 2fr 1fr 2fr 1fr;
         grid-template-rows: 1fr;
         text-align: left;
         justify-items: left;
